--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: Tor for Docker
 
-* NOTE: This repo has moved from Github.  See [[https://salsa.debian.org/jgoerzen/docker-tor][its new home on Salsa]].
+*NOTE: This repo has moved from Github.  See [[https://salsa.debian.org/jgoerzen/docker-tor][its new home on Salsa]].*
 
 This is a [[https://www.torproject.org/][Tor]] interface for Docker.
 
